force-app/main/default/objects/Integrations__c/Integrations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Integrations</label>
</CustomObject>