force-app/main/default/objects/Integrations__c/fields/BN_API_URL__c.field-meta.xml
<CustomField>
    <fullName>BN_API_URL__c</fullName>
    <label>BN API URL</label>
    <type>Url</type>
</CustomField>