force-app/main/default/objects/Integrations__c/fields/is_RU_Sync_Active__c.field-meta.xml
<CustomField>
    <fullName>is_RU_Sync_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is RU Sync Active</label>
    <type>Checkbox</type>
</CustomField>