force-app/main/default/objects/Integrations__c/fields/RU_API_URL__c.field-meta.xml
<CustomField>
    <fullName>RU_API_URL__c</fullName>
    <label>RU API URL</label>
    <type>Url</type>
</CustomField>